# noa

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  SPEC.md  docker-compose.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_actions_tools.py  0003_whm_servers.py  0004_workflow_todos.py  0005_expand_workflow_todo_statuses.py  0006_action_receipts.py  (+6 more)
apps/api/tests/: conftest.py  test_action_tool_run_lifecycle.py  test_agent_runner.py  test_agent_runner_streaming.py  test_assistant.py  test_assistant_commands.py  test_assistant_operations.py  test_assistant_run_routes.py  test_assistant_runs.py  test_assistant_service.py  test_assistant_streaming.py  test_auth_deps.py  test_auth_login.py  test_auth_login_rate_limiter.py  test_config_cors_origins.py  test_config_env_file.py  test_health.py  test_httpx_dependency.py  test_json_safety.py  test_logging_context.py  test_logging_redaction.py  test_message_ordering_created_at.py  test_postgres_client.py  test_proxmox_admin_service.py  test_proxmox_client_endpoints.py  test_proxmox_client_normalization.py  test_proxmox_server_ref.py  test_proxmox_tools_cloudinit.py  test_proxmox_tools_nic.py  test_proxmox_tools_pools.py  test_proxmox_tools_vm_reads.py  test_proxmox_workflow_templates.py  test_rbac.py  test_request_context.py  test_secret_crypto.py  test_system_prompt_loader.py  test_telemetry.py  test_threads.py  test_tool_argument_validation.py  test_tool_error_sanitizer.py  (+16 more)
(+589 files in other folders)
